test/semantics/programs/valid/valid-operation-dif-types3.guav
# Should pass since this is a operands are compatible types for the operation

oneToSeven = [1, 2] + [3, 4, 5]
oneToSeven += [6, 7]
