test/semantics/programs/invalid/invalid-operation9.guav
# Should fail since incompatible operand types (Tuple size is immutable)

x = (1, 2, 3) + (4, 5)
